--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>My Life To-Do List</h1>
+        <h1>MyLife To-Do List</h1>
         <form id="todo-form">
-            <input type="text" id="todo-input" placeholder="Add a new task..." required>
+            <input type="text" id="todo-input" placeholder="Add a new task..." required minlength="3">
             <select id="todo-category">
                 <option value="self-care">Self-Care</option>
                 <option value="travel">Travel</option>
                 <option value="school">School</option>
                 <option value="exercise">Exercise</option>
-                <option value="personal development">Personal Development</option>
-                <option value="home decor">Home Decor</option>
-                <option value="personal finance management">Personal Finance Management</option>
                 <option value="other">Other</option>
             </select>
             <button type="submit">Add Task</button>
