--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <option value="travel">Travel</option>
                 <option value="school">School</option>
                 <option value="exercise">Exercise</option>
+                <option value="home decor">Home Decor</option>
                 <option value="other">Other</option>
             </select>
             <button type="submit">Add Task</button>
